CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2006 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/

$Id$


2006.May.14 (0.9.16)
  * Interface improvements:
    -----------------------
    * Modified "Text" tool so that it correctly handles the 16-bit unicode
      characters that SDL sends.
      (The text buffer is held internally as an array of wchar_t, and
      makes uses of various wide-character functions.  It is converted
      back into 16-bit unicode characters to satisfy SDL_ttf.  Tested on
      Windows and Linux.)
      John Popplewell <john@johnnypops.demon.co.uk>

    * tuxpaint-import shell script now examines Tux Paint's configuration
      file (first in /usr/local/etc/tuxpaint, then /etc/tuxpaint, then $HOME)
      for the window size settings and saved-file directory options
      (rather than assuming a 640x480 screen and images saved in
      $HOME/.tuxpaint/saved/).

      Discovered (or assumed) window size and directory settings are shown
      when tuxpaint-import is first run (even with no arguments).

    * In windowed mode, Tux Paint tries to open its window in the center
      of the screen (if supported by the OS or window manager).

    * Improved some dialog text, including labels for "Yes/No" buttons.
      (Thanks to Vashti for suggestions.)

    * Sound effects take advantage of stereo.  (e.g., paint brush sounds come
      more from the left speaker when painting on the left.)
  
  * Tool improvements:
    ------------------------
    * Magic Sparkles can now be different colors.

    * Magic Negative, Fade, Darken, Tint and Cartoon all now apply with a
      circular shape, rather than a square.

    * Magic Grass has a sound effect.
    
    * Round erasers added.

  * New Starter Images:
    -------------------
    * Shipwreck
      Jim Trice <jimtrice@linuxmail.org>

    * Tux the farmer
      Jim Trice <jimtrice@linuxmail.org>