@@ -9,7 +9,7 @@ http://www.newbreedsoftware.com/tuxpaint/
 $Id$
 
 
-2006.May.14 (0.9.16)
+2006.June.02 (0.9.16)
   * Interface improvements:
     -----------------------
     * Modified "Text" tool so that it correctly handles the 16-bit unicode
@@ -154,6 +154,8 @@ $Id$
       Thanks to: Albert Cahalan <albert@users.sf.net>
 
     * Silencing any errors when running kde- or gnome-config during install.
+
+    * Implemented strcasestr() for systems which don't have it.
 
   * Bug Fixes:
     ----------
